services/vault/00-namespaces.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: vault

---

kind: Namespace
apiVersion: v1
metadata:
  name: vault-operator
